force-app/main/default/objects/PC_Chat_Session__c/fields/PC_Case__c.field-meta.xml
<CustomField>
    <fullName>PC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>PC Chat Sessions</relationshipLabel>
    <relationshipName>PC_Chat_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>