force-app/main/default/objects/PC_Chat_Session__c/fields/PC_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>PC_Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PC_Closed_Chat_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>