force-app/main/default/objects/PC_Chat_Session__c/fields/PC_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>PC_Closed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>