force-app/main/default/objects/PC_Chat_Session__c/fields/PC_Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>PC_Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>