force-app/main/default/objects/PC_Chat_Session__c/fields/PC_Last_Chat_Date__c.field-meta.xml
<CustomField>
    <fullName>PC_Last_Chat_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Chat Date</label>
    <type>DateTime</type>
</CustomField>