force-app/main/default/objects/PC_Chat_Session__c/fields/PC_TS_First_Response_Logged__c.field-meta.xml
<CustomField>
    <fullName>PC_TS_First_Response_Logged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TS First Response Logged</label>
    <type>Checkbox</type>
</CustomField>